@@ -119,6 +119,13 @@ in the {kibana-ref}/service-maps.html[Service Map] and a downstream service
 in the {kibana-ref}/dependencies.html[Dependencies Table]. The provided subtype
 will be used as the downstream service name.
 
+** `links` +{type-array}+ Span links.
+A span can refer to zero or more other transactions or spans (separate from
+its parent). Span links will be shown in the Kibana APM app trace view. The
+`links` argument is an array of objects with a single "context" field that is a
+`Transaction`, `Span`, or W3C trace-context 'traceparent' string.  For example:
+`transaction.startSpan('aName', { links: [{ context: anotherSpan }] })`.
+
 Start and return a new custom span associated with this transaction.
 When a span is started it will measure the time until <<span-end,`span.end()`>> is called.
 
