@@ -350,15 +350,25 @@ declare namespace apm {
     [propName: string]: any;
   }
 
+  // Link and `links` are intended to be compatible with OTel's
+  // equivalent APIs in "opentelemetry-js-api/src/trace/link.ts". Currently
+  // span link attributes are not supported.
+  export interface Link {
+    /** A W3C trace-context 'traceparent' string, Transaction, or Span. */
+    context: Transaction | Span | string; // This is a SpanContext in OTel.
+  }
+
   export interface TransactionOptions {
     startTime?: number;
     childOf?: Transaction | Span | string;
+    links?: Link[];
   }
 
   export interface SpanOptions {
     startTime?: number;
     childOf?: Transaction | Span | string;
     exitSpan?: boolean;
+    links?: Link[];
   }
 
   type CaptureBody = 'off' | 'errors' | 'transactions' | 'all';
