@@ -4,9 +4,10 @@ const truncate = require('unicode-byte-truncate')
 
 const config = require('../config')
 const constants = require('../constants')
+const { SpanCompression } = require('./span-compression')
 const Timer = require('./timer')
 const TraceContext = require('../tracecontext')
-const { SpanCompression } = require('./span-compression')
+const { TraceParent } = require('../tracecontext/traceparent')
 
 module.exports = GenericSpan
 
@@ -32,6 +33,16 @@ function GenericSpan (agent, ...args) {
   this._ids = null // Populated by sub-types of GenericSpan
   this._otelKind = null
   this._otelAttributes = null
+
+  this._links = []
+  if (opts.links) {
+    for (let i = 0; i < opts.links.length; i++) {
+      const link = linkFromLinkArg(opts.links[i])
+      if (link) {
+        this._links.push(link)
+      }
+    }
+  }
 
   this.timestamp = this._timer.start
   this.ended = false
@@ -210,5 +221,42 @@ GenericSpan.prototype._serializeOTel = function (payload) {
       // value types to those supported by the APM server intake API.
       payload.otel.attributes = this._otelAttributes
     }
+  }
+}
+
+// Translate a `opts.links` entry (see the `Link` type in "index.d.ts") to a
+// span link as it will be serialized and sent to APM server. If the linkArg is
+// invalid, this will return null.
+//
+// @param {Object} linkArg - An object with a `context` property that is a
+//    Transaction, Span, or TraceParent instance, or a W3C trace-context
+//    'traceparent' string.
+function linkFromLinkArg (linkArg) {
+  if (!linkArg || !linkArg.context) {
+    return null
+  }
+
+  const ctx = linkArg.context
+  let traceId
+  let spanId
+
+  if (ctx._context instanceof TraceContext) { // Transaction or Span
+    traceId = ctx._context.traceparent.traceId
+    spanId = ctx._context.traceparent.id
+  } else if (ctx instanceof TraceParent) {
+    traceId = ctx.traceId
+    spanId = ctx.id
+  } else if (typeof (ctx) === 'string') {
+    // Note: Unfortunately TraceParent.fromString doesn't validate the string.
+    const traceparent = TraceParent.fromString(ctx)
+    traceId = traceparent.traceId
+    spanId = traceparent.id
+  } else {
+    return null
+  }
+
+  return {
+    trace_id: traceId,
+    span_id: spanId
   }
 }
