@@ -256,6 +256,10 @@ Span.prototype._encode = function (cb) {
 
   this._serializeOTel(payload)
 
+  if (this._links.length > 0) {
+    payload.links = this._links
+  }
+
   if (this._stackObj) {
     this._stackObj.then(
       value => done(null, value),
