@@ -17,8 +17,6 @@ const {
 } = require('../config')
 var { TransactionIds } = require('./ids')
 const TraceState = require('../tracecontext/tracestate')
-const TraceContext = require('../tracecontext')
-const { TraceParent } = require('../tracecontext/traceparent')
 
 module.exports = Transaction
 util.inherits(Transaction, GenericSpan)
@@ -63,13 +61,10 @@ function Transaction (agent, name, ...args) {
       }
     }
     if (traceContinuationStrategy === TRACE_CONTINUATION_STRATEGY_RESTART) {
-      const link = spanLinkFromChildOf(opts.childOf)
-      if (link) {
-        if (!opts.links || !Array.isArray(opts.links)) {
-          opts.links = []
-        }
-        opts.links.push(link)
+      if (!opts.links || !Array.isArray(opts.links)) {
+        opts.links = []
       }
+      opts.links.push({ context: opts.childOf })
       delete opts.childOf // restart the trace
       delete opts.tracestate
     }
@@ -279,6 +274,10 @@ Transaction.prototype.toJSON = function () {
 
   this._serializeOTel(payload)
 
+  if (this._links.length > 0) {
+    payload.links = this._links
+  }
+
   return payload
 }
 
@@ -471,39 +470,4 @@ function flattenBreakdown (source, target = {}, prefix = '') {
   }
 
   return target
-}
-
-// XXX might want this somewhere else to share
-// Return a span link object for the given `childOf` argument to Transaction
-// or Span creation. This returns null if `childOf` is not given or is
-// invalid.
-//
-// @param {Transaction | Span | TraceParent | string} [childOf] - Span link
-//    data is extracted from this argument. If this is a string, it is
-//    expected to be a W3C trace-context 'traceparent' string.
-function spanLinkFromChildOf (childOf) {
-  let traceId
-  let spanId
-
-  if (!childOf) {
-    return null
-  } else if (childOf._context instanceof TraceContext) {
-    traceId = childOf._context.traceparent.traceId
-    spanId = childOf._context.traceparent.id
-  } else if (childOf instanceof TraceParent) {
-    traceId = childOf.traceId
-    spanId = childOf.id
-  } else if (typeof (childOf) === 'string') {
-    // Note: Unfortunately this doesn't validate the string.
-    const traceparent = TraceParent.fromString(childOf)
-    traceId = traceparent.traceId
-    spanId = traceparent.id
-  } else {
-    return null
-  }
-
-  return {
-    trace_id: traceId,
-    span_id: spanId
-  }
 }
